Bug 67344 - UI: "Character Spacing" drop down menu in sidebar closes on release of left click
Summary: UI: "Character Spacing" drop down menu in sidebar closes on release of left c...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: Other Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:4.2.0 target:4.1.1
Keywords:
: 66892 (view as bug list)
Depends on:
Blocks: Sidebar-Properties-Character
  Show dependency treegraph
 
Reported: 2013-07-26 09:27 UTC by Liban Hannan
Modified: 2017-09-26 21:09 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Liban Hannan 2013-07-26 09:27:33 UTC
Problem description: In the sidebar under the "Text" section - When clicking on the  "Character Spacing" drop down menu, the menu closes once you release left click. Other menus in the side bar stay open as expected.

Steps to reproduce:
1. .... Enable experimental sidebar
2. .... Expand open the "Properties" section of the sidebar
3. .... Under the "Text" subsection, click on "Character Spacing"

Current behavior: Menu close when you release left click

Expected behavior: Menu stays open to allow selection of options after left click is released.

              
Operating System: Ubuntu
Version: 4.1.0.4 release
Comment 1 Commit Notification 2013-07-26 14:02:41 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b11d022aeba5f981a9a3e4d8322ca5797f16944a

Resolves: fdo#67344 wrong relative menu position



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2013-07-26 16:33:34 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=70f9d122ecfc24aed528881c9ec734f9d3bcbfb3&h=libreoffice-4-1

Resolves: fdo#67344 wrong relative menu position


It will be available in LibreOffice 4.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Maxim Monastirsky 2013-12-03 11:55:14 UTC
*** Bug 66892 has been marked as a duplicate of this bug. ***