Resolves: fdo#67344 wrong relative menu position

Change-Id: I4a0cc610cc3c6a9c4164a69d40a9b0230aa702a4
(cherry picked from commit b11d022aeba5f981a9a3e4d8322ca5797f16944a)
Reviewed-on: https://gerrit.libreoffice.org/5123
Reviewed-by: Luboš Luňák <l.lunak@suse.cz>
Tested-by: Luboš Luňák <l.lunak@suse.cz>